--- a/result/2022-01-14.md
+++ b/result/2022-01-14.md
@@ -4,8 +4,8 @@
 4. [上海3名感染者来自同一奶茶店](https://s.weibo.com//weibo?q=%23%E4%B8%8A%E6%B5%B73%E5%90%8D%E6%84%9F%E6%9F%93%E8%80%85%E6%9D%A5%E8%87%AA%E5%90%8C%E4%B8%80%E5%A5%B6%E8%8C%B6%E5%BA%97%23&Refer=top) 806971
 5. [95后帅警官一夜白头](https://s.weibo.com//weibo?q=%2395%E5%90%8E%E5%B8%85%E8%AD%A6%E5%AE%98%E4%B8%80%E5%A4%9C%E7%99%BD%E5%A4%B4%23&Refer=top) 685834
 6. [胡明轩垫脚](https://s.weibo.com//weibo?q=%E8%83%A1%E6%98%8E%E8%BD%A9%E5%9E%AB%E8%84%9A&Refer=top) 613180
-7. [天津男子晒家中囤货堪比超市货架](https://s.weibo.com//weibo?q=%23%E5%A4%A9%E6%B4%A5%E7%94%B7%E5%AD%90%E6%99%92%E5%AE%B6%E4%B8%AD%E5%9B%A4%E8%B4%A7%E5%A0%AA%E6%AF%94%E8%B6%85%E5%B8%82%E8%B4%A7%E6%9E%B6%23&Refer=top) 556199
-8. [西安的烟火气回来了](https://s.weibo.com//weibo?q=%23%E8%A5%BF%E5%AE%89%E7%9A%84%E7%83%9F%E7%81%AB%E6%B0%94%E5%9B%9E%E6%9D%A5%E4%BA%86%23&Refer=top) 553145
+7. [西安的烟火气回来了](https://s.weibo.com//weibo?q=%23%E8%A5%BF%E5%AE%89%E7%9A%84%E7%83%9F%E7%81%AB%E6%B0%94%E5%9B%9E%E6%9D%A5%E4%BA%86%23&Refer=top) 601569
+8. [天津男子晒家中囤货堪比超市货架](https://s.weibo.com//weibo?q=%23%E5%A4%A9%E6%B4%A5%E7%94%B7%E5%AD%90%E6%99%92%E5%AE%B6%E4%B8%AD%E5%9B%A4%E8%B4%A7%E5%A0%AA%E6%AF%94%E8%B6%85%E5%B8%82%E8%B4%A7%E6%9E%B6%23&Refer=top) 556199
 9. [西安疫情](https://s.weibo.com//weibo?q=%23%E8%A5%BF%E5%AE%89%E7%96%AB%E6%83%85%23&Refer=top) 468723
 10. [郭艾伦报平安](https://s.weibo.com//weibo?q=%23%E9%83%AD%E8%89%BE%E4%BC%A6%E6%8A%A5%E5%B9%B3%E5%AE%89%23&Refer=top) 446376
 11. [西安一卡车防疫物资散落众人30分钟急救援](https://s.weibo.com//weibo?q=%23%E8%A5%BF%E5%AE%89%E4%B8%80%E5%8D%A1%E8%BD%A6%E9%98%B2%E7%96%AB%E7%89%A9%E8%B5%84%E6%95%A3%E8%90%BD%E4%BC%97%E4%BA%BA30%E5%88%86%E9%92%9F%E6%80%A5%E6%95%91%E6%8F%B4%23&Refer=top) 409148
@@ -41,3 +41,4 @@
 41. [漂染后的血泪分享](https://s.weibo.com//weibo?q=%23%E6%BC%82%E6%9F%93%E5%90%8E%E7%9A%84%E8%A1%80%E6%B3%AA%E5%88%86%E4%BA%AB%23&Refer=top) 151040
 42. [威姆斯韩德君冲突](https://s.weibo.com//weibo?q=%23%E5%A8%81%E5%A7%86%E6%96%AF%E9%9F%A9%E5%BE%B7%E5%90%9B%E5%86%B2%E7%AA%81%23&Refer=top) 144486
 43. [2022春节档已有11部电影](https://s.weibo.com//weibo?q=%232022%E6%98%A5%E8%8A%82%E6%A1%A3%E5%B7%B2%E6%9C%8911%E9%83%A8%E7%94%B5%E5%BD%B1%23&Refer=top) 135968
+44. [存放鸡蛋要大头朝上](https://s.weibo.com//weibo?q=%23%E5%AD%98%E6%94%BE%E9%B8%A1%E8%9B%8B%E8%A6%81%E5%A4%A7%E5%A4%B4%E6%9C%9D%E4%B8%8A%23&Refer=top) 114659
