--- a/result/2022-01-14.md
+++ b/result/2022-01-14.md
@@ -43,3 +43,4 @@
 43. [威姆斯韩德君冲突](https://s.weibo.com//weibo?q=%23%E5%A8%81%E5%A7%86%E6%96%AF%E9%9F%A9%E5%BE%B7%E5%90%9B%E5%86%B2%E7%AA%81%23&Refer=top) 144486
 44. [2022春节档已有11部电影](https://s.weibo.com//weibo?q=%232022%E6%98%A5%E8%8A%82%E6%A1%A3%E5%B7%B2%E6%9C%8911%E9%83%A8%E7%94%B5%E5%BD%B1%23&Refer=top) 135968
 45. [CBA](https://s.weibo.com//weibo?q=CBA&Refer=top) 107847
+46. [上海新增一处中风险地区](https://s.weibo.com//weibo?q=%23%E4%B8%8A%E6%B5%B7%E6%96%B0%E5%A2%9E%E4%B8%80%E5%A4%84%E4%B8%AD%E9%A3%8E%E9%99%A9%E5%9C%B0%E5%8C%BA%23&Refer=top) 64088
